[project]
name = "xchem-fragalysis-stack-stress-tests"
description = "Utilities for Fragalysis Stack stress-testing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.24.1",
    "xchem-fragalysis>=1.2.0,<2",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.23",
]

[tool.uv]
package = false
